--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,10 @@ services:
       dockerfile: Dockerfile.dev
       context: ./frontend
     volumes:
-      - /app/node-modules
+      - /app/node_modules
       - ./frontend:/app
+    stdin_open: true
+
   nginx:
     restart: always
     build:
@@ -14,6 +16,7 @@ services:
       context: ./nginx
     ports:
       - '3000:80'
+
   backend:
     build:
       dockerfile: Dockerfile.dev
@@ -22,6 +25,7 @@ services:
     volumes:
       - /app/node_modules
       - ./backend:/app
+
   mysql:
     build: ./mysql
     restart: unless-stopped
