--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,16 @@ after_success:
   - docker push kiss0104040/docker-frontend
   - docker push kiss0104040/docker-backend
   - docker push kiss0104040/docker-nginx
+
+deploy:
+  provider: elasticbeanstalk
+  region: 'ap-northeast-2'
+  app: 'docker-fullstack-app'
+  env: 'Dockerfullstackapp-env'
+  bucket_name: elasticbeanstalk-ap-northeast-2-055019212454
+  bucket_path: 'docker-fullstack-app'
+  on:
+    branch: master
+
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_ACCESS_KEY
