--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ deploy:
   region: 'ap-northeast-2'
   app: 'docker-fullstack-app'
   env: 'Dockerfullstackapp-env'
-  bucket_name: elasticbeanstalk-ap-northeast-2-055019212454
+  bucket_name: 'elasticbeanstalk-ap-northeast-2-05501921245'
   bucket_path: 'docker-fullstack-app'
   on:
     branch: master
