--- a/.travis.yml
+++ b/.travis.yml
@@ -25,9 +25,9 @@ after_success:
 deploy:
   provider: elasticbeanstalk
   access_key_id:
-    secure: $AWS_ACCESS_KEY
+    secure: 'Encrypted <AWS_ACCESS_KEY>='
   secret_access_key:
-    secure: $AWS_SECRET_ACCESS_KEY
+    secure: 'Encypted <AWS_SECRET_ACCESS_KEY>='
   region: 'ap-northeast-2'
   app: 'docker-fullstack-app'
   env: 'Dockerfullstackapp-env'
