--- a/.travis.yml
+++ b/.travis.yml
@@ -24,9 +24,13 @@ after_success:
 
 deploy:
   provider: elasticbeanstalk
-  access_key_id: $AWS_ACCESS_KEY
-  secret_access_key: $AWS_SECRET_ACCESS_KEY
   region: 'ap-northeast-2'
   app: 'docker-fullstack-app'
   env: 'Dockerfullstackapp-env'
-  bucket_name: 'docker-fullstack-app'
+  bucket_name: elasticbeanstalk-ap-northeast-2-05501921245
+  bucket_path: 'docker-fullstack-app'
+  on:
+    branch: main
+
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_ACCESS_KEY
