--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ deploy:
   bucket_name: elasticbeanstalk-ap-northeast-2-05501921245
   bucket_path: 'docker-fullstack-app'
   on:
-    branch: main
+    branch: master
 
   access_key_id: $AWS_ACCESS_KEY
   secret_access_key: $AWS_SECRET_ACCESS_KEY
